--- a/gb/17/8/23/n9560021.md
+++ b/gb/17/8/23/n9560021.md
@@ -1,69 +1,76 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fsi227/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fsi227/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fsi227/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fsi227/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fsi227/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fsi227/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fsi227/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fsi227/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fsi227/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fsi227/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fsi227/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fsi227/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fsi227/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fsi227/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fsi227/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fsi227/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/fsi227/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/fsi227/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fsi227/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fsi227/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fsi227/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fsi227/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fsi227/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fsi227/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fsi227/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fsi227/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fsi227/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fsi227/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fsi227/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fsi227/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fsi227/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/fsi227/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/fsi227/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fsi227/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fsi227/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fsi227/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fsi227/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fsi227/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fsi227/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fsi227/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fsi227/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/fsi227/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fsi227/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fsi227/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fsi227/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>小测试：选你最喜欢的狗狗 看到你内心最深处</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/08/223c2da61682d44b7d-600x400.jpg" />
 <h6>选狗狗看出你内心最深处的个性。（Shutter Stock／大纪元合成）
 </h6>
 <hr>
-	<p>【大纪元2017年08月24日讯】<ahref="https://github.com/fsi227/djy/blob/master/gb/tag/%E6%9F%AF%E5%9F%BA%E7%8A%AC.md#1">柯基犬</a>、斗牛犬、<ahref="https://github.com/fsi227/djy/blob/master/gb/tag/%E5%93%88%E5%A3%AB%E5%A5%87.md#1">哈士奇</a>、博美，四只可爱的狗狗，体型完全不同，个性更是迥异，你最喜欢那一只呢？快选一只吧，可以从中看出你内心最深处的个性呢！</p>
-<p>据说这是一种占卜术相关的<ahref="https://github.com/fsi227/djy/blob/master/gb/tag/%E6%B5%8B%E8%AF%95.md#1">测试</a>，做过的人都说准。</p>
+	<p>【大纪元2017年08月24日讯】<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%9F%AF%E5%9F%BA%E7%8A%AC.md#1">柯基犬</a>、斗牛犬、<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%93%88%E5%A3%AB%E5%A5%87.md#1">哈士奇</a>、博美，四只可爱的狗狗，体型完全不同，个性更是迥异，你最喜欢那一只呢？快选一只吧，可以从中看出你内心最深处的个性呢！</p>
+<p>据说这是一种占卜术相关的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B5%8B%E8%AF%95.md#1">测试</a>，做过的人都说准。</p>
 <p>到底准不准还需要你来做评判！</p>
 <p>从四只可爱的狗狗中选出你最喜欢的那一只吧！</p>
 <p>选好了吗？</p>
 <p>一起来看看答案吧！</p>
-<h2>选择A：<ahref="https://github.com/fsi227/djy/blob/master/gb/tag/%E6%9F%AF%E5%9F%BA%E7%8A%AC.md#1">柯基犬</a></h2>
+<h2>选择A：<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%9F%AF%E5%9F%BA%E7%8A%AC.md#1">柯基犬</a></h2>
 <p>你是个比较胆大心细的人。</p>
 <p>虽然在别人眼里看来你是一个说到就做到的人，但其实上，你在行动前早已谨慎的思考再三，因为你是一个大脑非常活跃的人。</p>
 <p>在对待感情上，你属于比较不太主动的人。你不太敢采取自己行动去追求对方，因为在你心里害怕被拒绝，所以你总是在用顺其自然的方式来对待感情。</p>
+<figure id="attachment_13652828" aria-describedby="caption-attachment-13652828" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/03/id13652828-dog-g769e5411f_1920.jpg"><img class="size-large wp-image-13652828" src="https://i.epochtimes.com/assets/uploads/2022/03/id13652828-dog-g769e5411f_1920-600x400.jpg" alt="柯基犬" width="600" b="400" /></a><figcaption id="caption-attachment-13652828" class="wp-caption-text">选择柯基犬的人，比较胆大心细。（Pixabay）</figcaption></figure>
 <h2>选择B：斗牛犬</h2>
 <p>你是个比较温柔而又聪明的人。</p>
 <p>你的心思较细腻，常常可以意识到别人给你的暗示，你的朋友也相当多，但是在你的内心很渴望有个懂你了解你的人。</p>
 <p>你在感情上比较很放得开，在你的心里你认为是你的始终你的，很多事情是强求不来，往往让别人误解你是个眼光很高的人，因为你只是还没有遇到对自己感觉对的人。</p>
-<h2>选择C：<ahref="https://github.com/fsi227/djy/blob/master/gb/tag/%E5%93%88%E5%A3%AB%E5%A5%87.md#1">哈士奇</a></h2>
+<h2>选择C：<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%93%88%E5%A3%AB%E5%A5%87.md#1">哈士奇</a></h2>
 <p>你心里的想法比较单纯、积极乐观又正能量。</p>
 <p>你不会对任何事情或人抱怨，假如就算你遇到问题了也会很积极的想办法去解决，但是你的内心深处总是想的比较多，总是不愿把话说出来，把话藏在自己心里，因为你的想法是不想让别人替自己担心。</p>
 <p>在感情上，你内心一样有点傻傻的，总是藏在心里不愿意说出来，这样往往错失了一段好的感情，不过还好你是正能量而又积极的人，所以你的异性缘一直都是很不错的。</p>
+<figure id="attachment_13388048" aria-describedby="caption-attachment-13388048" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/11/id13388048-shutterstock_657368179.jpg"><img class="size-large wp-image-13388048" src="https://i.epochtimes.com/assets/uploads/2021/11/id13388048-shutterstock_657368179-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13388048" class="wp-caption-text">选择哈士奇的人，心里的想法比较单纯、积极乐观又正能量。（Shutterstock）</figcaption></figure>
 <h2>选择D：博美犬</h2>
 <p>你有着和别人不一样的想法，想事情总是比别人想的清楚透彻。</p>
 <p>在别人眼里，你是个有新的点子并且脑袋也转得很快的人，周围的朋友都很喜欢跟你相处，因为你的脾气也比较好，也很喜欢帮助朋友，你总的来说算是个耳根子比较软的人。</p>
 <p>在对待感情上，你是个敢恨敢爱的人，喜欢就会去追求，因为你不想因为错过而觉得后悔，而讨厌一个人就会离他远远的。</p>
-<p><center><a src=""></a><a href="https://git.io/g"><img width="600" src="https://raw.githubusercontent.com/fsi227/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/fsi227/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/RTsFuRzpYWs?rel=0" width="600" b="338" frameborder="0" allowfullscreen="allowfullscreen"></a></center>责任编辑：方紫韵</p>
+<p>责任编辑：方紫韵</p>
 	
 <hr>
-<hr>
+
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fsi227/djy/blob/master/gb/9/10/7/n2680532.md#1">争执房产 莽夫刺伤妻儿</a></li>
-<li><a href="https://github.com/fsi227/djy/blob/master/gb/9/11/27/n2735978.md#1">夫妻吵架路灯坏都找他  10连霸里长伯获奖</a></li>
-<li><a href="https://github.com/fsi227/djy/blob/master/gb/10/1/8/n2780094.md#1">调查：夫妻每天吵架40分钟</a></li>
-<li><a href="https://github.com/fsi227/djy/blob/master/gb/10/1/8/n2780325.md#1">夫妻吵架家务居首 法国属刑事罪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/24/n12281419.md#1">《魔鬼在统治着我们的世界》系列片（5）</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672763.md#1">【更新3.25】俄从格鲁吉亚搬兵入乌克兰</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674639.md#1">【更新3.26】乌总统：只要北约1%的坦克飞机</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675233.md#1">【更新3.27】下轮俄乌谈判将在土耳其举行</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/4/n10023278.md#1" target="_blank">天下收藏第一人张伯驹的悲喜人生（上）</a></li><li><a href="https://github.com/fsi227/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/11/27/n8533466.md#1" target="_blank">一位医生太太见证医学无法达到的奇迹</a></li><hr>
-
-
-<strong>热门新闻：</strong>
-<li><a href="https://github.com/fsi227/djy/blob/master/gb/20/5/17/n12116387.md#1">太极掌门马保国PK王庆民 10秒被击倒3次</a></li>
-<li><a href="https://github.com/fsi227/djy/blob/master/gb/20/5/17/n12116772.md#1">川普：美掌握很多有关病毒实验室的不好信息</a></li>
-<li><a href="https://github.com/fsi227/djy/blob/master/gb/20/5/18/n12117371.md#1">WHA登场世卫中共拒台 料各国将联手发声反制</a></li>
-<li><a href="https://github.com/fsi227/djy/blob/master/gb/20/5/17/n12116520.md#1">【一线采访】舒兰公安局瘫痪 爆首例死亡</a></li>
-<li><a href="https://github.com/fsi227/djy/blob/master/gb/20/5/17/n12116632.md#1">传平壤广场移除金日成、金正日肖像</a></li>
-<li><a href="https://github.com/fsi227/djy/blob/master/gb/20/5/16/n12115144.md#1">对台湾赞不绝口 黄秋生：我的兄弟也要移民了</a></li>
-<li><a href="https://github.com/fsi227/djy/blob/master/gb/20/5/16/n12114576.md#1">主持遇险惊魂 张凤书长达10年没接外景</a></li>
-<li><a href="https://github.com/fsi227/djy/blob/master/gb/20/5/17/n12116007.md#1">盼辛龙走出丧妻之痛 吴宗宪：已下时间通牒</a></li>
-<li><a href="https://github.com/fsi227/djy/blob/master/gb/20/5/18/n12117650.md#1">因男团解散陷低潮 潘君仑返乡务农找回动力</a></li>
-<li><a href="https://github.com/fsi227/djy/blob/master/gb/20/5/18/n12118146.md#1">吴念真粉专已找回 遗憾贴文“几乎删光”</a></li>
-<li><a href="https://github.com/fsi227/djy/blob/master/gb/20/5/17/n12115416.md#1">【疫情中的纽约人】破解预言的人</a></li>
-<li><a href="https://github.com/fsi227/djy/blob/master/gb/13/7/18/n3919814.md#1">米开朗基罗（8）《创世纪》（下）</a></li>
-<li><a href="https://github.com/fsi227/djy/blob/master/gb/20/5/17/n12116029.md#1">隋朝人仙岛奇遇 回国已是唐朝中期</a></li>
-<li><a href="https://github.com/fsi227/djy/blob/master/gb/20/5/1/n12076409.md#1">【历史上的瘟疫】带走伦敦1/5人口的瘟疫</a></li>
-<li><a href="https://github.com/fsi227/djy/blob/master/gb/20/4/5/n12004394.md#1">入地府看见善恶记账簿 忏悔改过可销债</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/7/n10199292.md#1" target="_blank">古玉文：消灭私有制不是出路（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/5/5/n9108791.md#1" target="_blank">永远的传奇—从长春到世界（上）</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fsi227/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fsi227/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/8/23/n9560021.htm">小测试：选你最喜欢的狗狗 看到你内心最深处</a></p><hr>
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fsi227/djy/blob/master/gb/17/8/23/n9560021.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fsi227/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fsi227/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fsi227/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fsi227/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fsi227/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fsi227/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fsi227/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fsi227/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fsi227/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fsi227/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fsi227/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fsi227/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fsi227/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fsi227/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fsi227/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fsi227/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fsi227/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fsi227/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fsi227/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fsi227/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fsi227/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fsi227/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fsi227/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fsi227/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fsi227/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fsi227/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fsi227/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fsi227/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fsi227/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fsi227/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fsi227/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fsi227/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fsi227/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fsi227/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fsi227/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fsi227/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fsi227/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fsi227/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fsi227/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fsi227/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fsi227/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fsi227/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fsi227/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fsi227/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fsi227/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fsi227/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fsi227/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fsi227/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/8/23/n9560021.htm">小测试：选你最喜欢的狗狗 看到你内心最深处</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/17/8/23/n9560021.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
